docs: Adiciona Termos de Uso e Política de Privacidade (LGPD)
- TERMOS_DE_USO.md completo com todas as cláusulas legais
- POLITICA_DE_PRIVACIDADE.md em conformidade com LGPD
- Atualiza README.md com links para documentação legal
- Define responsabilidades, limitações e direitos dos usuários
- Conformidade: LGPD, CDC, Marco Civil da Internet
- Email de contato: pedejainc@gmail.com
- Foro: Vitória do Xingu - PA

Documentos prontos para submissão Google Play Store

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,11 @@ windows/
 pubspec.yaml
 pubspec.lock
 analysis_options.yaml
-*.md
+
+# Permite apenas documentação legal e README
 !README.md
+!TERMOS_DE_USO.md
+!POLITICA_DE_PRIVACIDADE.md
 
 # ===== ARQUIVOS SENSÍVEIS - NUNCA COMMITAR =====
 **/google-services.json
